--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -99,7 +99,7 @@
 {{!-- Weapons appear here --}}
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">{{localize "HYP3E.headers.name"}}</div>
+    <div class="item-name">{{localize "HYP3E.headers.weapons"}}</div>
     <div class="item-prop">{{localize "HYP3E.headers.atkRate"}}</div>
     <div class="item-prop">{{localize "HYP3E.headers.classRange"}}</div>
     <div class="item-prop">{{localize "HYP3E.headers.atkMod"}}</div>
@@ -149,7 +149,7 @@
 {{!-- Armors appear here --}}
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">{{localize "HYP3E.headers.name"}}</div>
+    <div class="item-name">{{localize "HYP3E.headers.armor"}}</div>
     <div class="item-prop">{{localize "HYP3E.headers.type"}}</div>
     <div class="item-prop">{{localize "HYP3E.armor.ac"}}</div>
     <div class="item-prop">{{localize "HYP3E.armor.dr"}}</div>
