--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -1,6 +1,6 @@
 <ol class="items-list">
   <li class="item flexrow items-header">
-    <div class="item-name">{{localize "HYP3E.headers.name"}}</div>
+    <div class="item-name">{{localize "HYP3E.headers.items"}}</div>
     <div class="item-prop">{{localize "HYP3E.item.qty"}}</div>
     <div class="item-prop">{{localize "HYP3E.item.weight"}}</div>
     <div class="item-prop">{{localize "HYP3E.item.location"}}</div>
