--- a/templates/actor/parts/npc-abilities.hbs
+++ b/templates/actor/parts/npc-abilities.hbs
@@ -2,38 +2,38 @@
 <div class="resource-content flexrow">
   <div class="npc-stat-block">
     {{!-- Basic combat stats here --}}
-    <h3>Combat Stats</h3>
+    <h3>{{localize "HYP3E.headers.combatStats"}}</h3>
     <div class="attribute-row flexrow">
-      <label for="system.hp.value" class="combat-label">HP</label>
+      <label for="system.hp.value" class="combat-label">{{localize "HYP3E.details.hp"}}</label>
       <input type="text" name="system.hp.value" value="{{system.hp.value}}" data-dtype="Number"/>
       /
       <input type="text" name="system.hp.max" value="{{system.hp.max}}" data-dtype="Number"/>
     </div>
     <div class="attribute-row flexrow">
-      <span class="combat-label rollable" data-roll="{{system.hd}}" data-label="Hit Dice">
-        <label for="system.hd">Hit Dice</label> 
+      <span class="combat-label rollable" data-roll="{{system.hd}}" data-label="{{localize 'HYP3E.dataLabel.hitDieRoll'}}">
+        <label for="system.hd">{{localize "HYP3E.details.hitDice"}}</label> 
         <i class="fas fa-dice-d6"></i>
       </span>
       <input type="text" name="system.hd" value="{{system.hd}}" data-dtype="String"/>
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.fa" class="combat-label">FA</label>
+      <label for="system.fa" class="combat-label">{{localize "HYP3E.fa"}}</label>
       <input type="text" name="system.fa" value="{{system.fa}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.dx" class="combat-label">DX</label>
+      <label for="system.dx" class="combat-label">{{localize "HYP3E.attributes.dex.abbrev"}}</label>
       <input type="text" name="system.dx" value="{{system.dx}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.ac.value" class="combat-label">Armor Class</label>
+      <label for="system.ac.value" class="combat-label">{{localize "HYP3E.armor.armorClass"}}</label>
       <input type="text" name="system.ac.value" value="{{system.ac.value}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.ac.dr" class="combat-label">DR</label>
+      <label for="system.ac.dr" class="combat-label">{{localize "HYP3E.armor.dr"}}</label>
       <input type="text" name="system.ac.dr" value="{{system.ac.dr}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
-      <label for="system.ca" class="combat-label">CA</label>
+      <label for="system.ca" class="combat-label">{{localize "HYP3E.ca"}}</label>
       <input type="text" name="system.ca" value="{{system.ca}}" data-dtype="Number" />
     </div>
     <div class="attribute-row flexrow">
@@ -49,40 +49,40 @@
     {{!-- Saving throws here --}}
     <div class="combat-block flexrow">
       <div class="resource-content flexrow flex-group-center">
-        <h3>Saving Throws</h3>
+        <h3>{{localize "HYP3E.headers.savingThrows"}}</h3>
       </div>  
     </div>
     <div class="saves-block flexrow flex-between">
       <div class="combat-block flexrow flex-group-center">
-        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.death.value}}" data-label="Death Save">
+        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.death.value}}" data-label="{{localize 'HYP3E.dataLabel.deathSave'}}">
           <label for="system.saves.death.value" class="combat-label">{{localize "HYP3E.saves.death.abbrev"}}</label>
           <i class="fas fa-dice-d20"></i>
           </span>
         <input type="text" name="system.saves.death.value" value="{{system.saves.death.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
-        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.device.value}}" data-label="Device Save">
+        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.device.value}}" data-label="{{localize 'HYP3E.dataLabel.deviceSave'}}">
           <label for="system.saves.device.value" class="combat-label">{{localize "HYP3E.saves.device.abbrev"}}</label>
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.device.value" value="{{system.saves.device.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
-        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.transformation.value}}" data-label="Transformation Save">
+        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.transformation.value}}" data-label="{{localize 'HYP3E.dataLabel.xformSave'}}">
           <label for="system.saves.transformation.value" class="combat-label">{{localize "HYP3E.saves.transformation.abbrev"}}</label>
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.transformation.value" value="{{system.saves.transformation.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
-        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.avoidance.value}}" data-label="Avoidance Save">
+        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.avoidance.value}}" data-label="{{localize 'HYP3E.dataLabel.avoidanceSave'}}">
           <label for="system.saves.avoidance.value" class="combat-label">{{localize "HYP3E.saves.avoidance.abbrev"}}</label>
           <i class="fas fa-dice-d20"></i>
         </span>
         <input type="text" name="system.saves.avoidance.value" value="{{system.saves.avoidance.value}}"/>
       </div>
       <div class="combat-block flexrow flex-group-center">
-        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.sorcery.value}}" data-label="Sorcery Save">
+        <span class="rollable" data-roll-type="save" data-roll="1d20" data-roll-target="{{system.saves.sorcery.value}}" data-label="{{localize 'HYP3E.dataLabel.sorcerySave'}}">
           <label for="system.saves.sorcery.value" class="combat-label">{{localize "HYP3E.saves.sorcery.abbrev"}}</label>
           <i class="fas fa-dice-d20"></i>
         </span>
