--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -5,19 +5,19 @@
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
       <div class="flexrow">
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Equipped</label>
+          <label class="resource-label">{{localize 'HYP3E.item.equipped'}}</label>
           <input name="system.equipped" type="checkbox" {{checked system.equipped}}>
         </div>
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Qty</label>
+          <label class="resource-label">{{localize 'HYP3E.item.qty'}}</label>
           <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" data-dtype="Number"/>
         </div>
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Cost</label>
+          <label class="resource-label">{{localize 'HYP3E.item.cost'}}</label>
           <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
         </div>
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Weight</label>
+          <label class="resource-label">{{localize 'HYP3E.item.weight'}}</label>
           <input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number"/>
         </div>
       </div>
@@ -26,8 +26,8 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">Details</a>
-    <a class="item" data-tab="attributes">Attributes</a>
+    <a class="item" data-tab="description">{{localize 'HYP3E.tabs.details'}}</a>
+    <a class="item" data-tab="attributes">{{localize 'HYP3E.tabs.attributes'}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -39,7 +39,7 @@
 
         {{!-- Armor Attributes --}}
         <div class="flexshrink flex-group-center item-attributes">
-          <label class="resource-label">Wt Class</label>
+          <label class="resource-label">{{localize 'HYP3E.armor.wtClass'}}</label>
           <div class="form-fields">
             <select name="system.type">
               {{#select system.type}}
@@ -51,17 +51,17 @@
               {{/select}}
             </select>
           </div>
-          <label class="resource-label">Armor Class</label>
+          <label class="resource-label">{{localize 'HYP3E.armor.armorClass'}}</label>
           <input type="text" name="system.ac" value="{{system.ac}}" data-dtype="Number" />
-          <label class="resource-label">Dmg Resist</label>
+          <label class="resource-label">{{localize 'HYP3E.armor.dmgResist'}}</label>
           <input type="text" name="system.dr" value="{{system.dr}}" data-dtype="Number" />
-          <label class="resource-label">Base Move</label>
+          <label class="resource-label">{{localize 'HYP3E.movement.base.name'}}</label>
           <input type="text" name="system.mv" value="{{system.mv}}" data-dtype="Number" />
         </div>
 
         {{!-- Description --}}
         <div class="flex item-description">
-          <h3>Description</h3>
+          <h3>{{localize 'HYP3E.tabs.description'}}</h3>
           {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
           {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
         </div>
@@ -73,14 +73,14 @@
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
         {{#if rollData.isGM}}
-        <label class="resource-label">System Roll Formula</label>
-        <input type="text" name="system.formula" value="{{system.formula}}" disabled/>
+        <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
+        <input type="text" name="system.formula" value="{{system.formula}}"/>
         {{/if}}
-        <label class="resource-label">Chatbox Name</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
-        <label class="resource-label">Item ID</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
-        <label class="resource-label">Container ID</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
         <input type="text" name="system.containerId" value="{{system.containerId}}"/>
       </div>
     </div>
