--- a/templates/item/item-feature-sheet.hbs
+++ b/templates/item/item-feature-sheet.hbs
@@ -8,8 +8,8 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="attributes">Attributes</a>
+    <a class="item" data-tab="description">{{localize 'HYP3E.tabs.details'}}</a>
+    <a class="item" data-tab="attributes">{{localize 'HYP3E.tabs.attributes'}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -21,23 +21,23 @@
 
         {{!-- Class Feature Attributes --}}
         <div class="flexshrink flex-group-center item-attributes">
-          <label class="resource-label">Class</label>
+          <label class="resource-label">{{localize 'HYP3E.details.class'}}</label>
           <input type="text" name="system.class" value="{{system.class}}" data-dtype="String"/>
-          <label class="resource-label">Level</label>
+          <label class="resource-label">{{localize 'HYP3E.details.level'}}</label>
           <input type="text" name="system.level" value="{{system.level}}" data-dtype="String"/>
-          <label class="resource-label">Check Roll</label>
+          <label class="resource-label">{{localize 'HYP3E.checkRoll'}}</label>
           <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
-          <label class="resource-label">Target</label>
+          <label class="resource-label">{{localize 'HYP3E.target'}}</label>
           <input type="text" name="system.tn" value="{{system.tn}}" data-dtype="String"/>
-          <label class="resource-label">Blind Roll</label>
+          <label class="resource-label">{{localize 'HYP3E.blindRoll'}}</label>
           <select name="system.blindRoll">
             {{#select system.blindRoll}}
             <option value=""></option>
-            <option value="true">True</option>
-            <option value="false">False</option>
+            <option value="true">{{localize 'HYP3E.true'}}</option>
+            <option value="false">{{localize 'HYP3E.false'}}</option>
             {{/select}}
           </select>
-          <label class="resource-label">Save</label>
+          <label class="resource-label">{{localize 'HYP3E.spell.save'}}</label>
           <div class="form-fields">
             <select name="system.save">
               {{#select system.save}}
@@ -53,6 +53,7 @@
 
         {{!-- Description --}}
         <div class="flex item-description">
+          <h3>{{localize 'HYP3E.tabs.description'}}</h3>
           {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
           {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
         </div>
@@ -67,9 +68,9 @@
         {{!-- <label class="resource-label">System Roll Formula</label>
         <input type="text" name="system.formula" value="{{system.formula}}" disabled/> --}}
         {{/if}}
-        <label class="resource-label">Chatbox Name</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
-        <label class="resource-label">Item ID</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
       </div>
   </div>
