--- a/templates/item/item-weapon-sheet.hbs
+++ b/templates/item/item-weapon-sheet.hbs
@@ -5,19 +5,19 @@
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
       <div class="flexrow">
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Equipped</label>
+          <label class="resource-label">{{localize 'HYP3E.item.equipped'}}</label>
           <input name="system.equipped" type="checkbox" {{checked system.equipped}}>
         </div>
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Qty</label>
+          <label class="resource-label">{{localize 'HYP3E.item.qty'}}</label>
           <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" data-dtype="Number"/>
         </div>
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Cost</label>
+          <label class="resource-label">{{localize 'HYP3E.item.cost'}}</label>
           <input type="text" name="system.cost" value="{{system.cost}}" data-dtype="Number"/>
         </div>
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">Weight</label>
+          <label class="resource-label">{{localize 'HYP3E.item.weight'}}</label>
           <input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number"/>
         </div>
       </div>
@@ -26,8 +26,8 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">Details</a>
-    <a class="item" data-tab="attributes">Attributes</a>
+    <a class="item" data-tab="description">{{localize 'HYP3E.tabs.details'}}</a>
+    <a class="item" data-tab="attributes">{{localize 'HYP3E.tabs.attributes'}}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -39,9 +39,9 @@
 
         {{!-- Weapon Attributes --}}
         <div class="flexshrink flex-group-center item-attributes">
-          <label class="resource-label">Atk Rate</label>
+          <label class="resource-label">{{localize 'HYP3E.headers.atkRate'}}</label>
           <input type="text" name="system.rof" value="{{system.rof}}" data-dtype="String" />
-          <label class="resource-label">Atk Type</label>
+          <label class="resource-label">{{localize 'HYP3E.weapon.atkType'}}</label>
           <div class="form-fields">
             <select name="system.type">
               {{#select system.type}}
@@ -53,28 +53,28 @@
             </select>
           </div>
           {{#if system.melee}}
-          <label class="resource-label">Wpn Class</label>
+          <label class="resource-label">{{localize 'HYP3E.headers.wpnClass'}}</label>
           <input type="text" name="system.wc" value="{{system.wc}}" data-dtype="Number" />
           {{/if}}
           {{#if system.missile}}
-          <label class="resource-label">Range</label>
+          <label class="resource-label">{{localize 'HYP3E.weapon.range'}}</label>
           <div class="flexrow">
             <input type="text" name="system.range.short" value="{{system.range.short}}" data-dtype="Number" />
             <input type="text" name="system.range.medium" value="{{system.range.medium}}" data-dtype="Number" />
             <input type="text" name="system.range.long" value="{{system.range.long}}" data-dtype="Number" />
           </div>
           {{/if}}
-          <label class="resource-label">Atk Mod</label>
+          <label class="resource-label">{{localize 'HYP3E.headers.atkMod'}}</label>
           <input type="text" name="system.atkMod" value="{{numberFormat system.atkMod decimals=0 sign=true}}" data-dtype="Number" />
-          <label class="resource-label">Dmg Mod</label>
+          <label class="resource-label">{{localize 'HYP3E.headers.dmgMod'}}</label>
           <input type="text" name="system.dmgMod" value="{{numberFormat system.dmgMod decimals=0 sign=true}}" data-dtype="Number" />
-          <label for="system.damage" class="resource-label">Damage</label>
+          <label for="system.damage" class="resource-label">{{localize 'HYP3E.headers.damage'}}</label>
           <input type="text" name="system.damage" value="{{system.damage}}" data-dtype="String" />
         </div>
 
         {{!-- Description --}}
         <div class="flex item-description">
-          <h3>Description</h3>
+          <h3>{{localize 'HYP3E.tabs.description'}}</h3>
           {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
           {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
         </div>
@@ -86,14 +86,14 @@
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
         {{#if rollData.isGM}}
-        <label class="resource-label">System Roll (Attack) Formula</label>
+        <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
         <input type="text" name="system.formula" value="{{system.formula}}" data-dtype="String"/>
         {{/if}}
-        <label class="resource-label">Chatbox Name</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
-        <label class="resource-label">Item ID</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
-        <label class="resource-label">Container ID</label>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
         <input type="text" name="system.containerId" value="{{system.containerId}}"/>
       </div>
     </div>
