--- a/templates/actor/parts/actor-description.hbs
+++ b/templates/actor/parts/actor-description.hbs
@@ -52,7 +52,7 @@
     </div>
   </div>
 </div>
-<div class="description-block">
+<div class="flex biography-block">
   <h2>{{localize "HYP3E.headers.biography"}}</h2>
   {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
   {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}  
