--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -67,7 +67,7 @@
 
     {{!-- Active Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
-      <div class="npc-description-block">
+      <div class="flex npc-description-block">
         <h2>{{localize 'HYP3E.headers.effectsCond'}}</h2>
         {{> "systems/hyp3e/templates/actor/parts/actor-effects.hbs"}}
       </div>
