--- a/css/hyp3e.css
+++ b/css/hyp3e.css
@@ -490,6 +490,7 @@ textarea {
   padding: 0 2px;
   margin-right: 5px;
   margin-left: 5px;
+  min-width: 575px;
   height: 100%;
 }
 .hyp3e .npc-description-block .editor {
