--- a/templates/actor/parts/actor-effects.hbs
+++ b/templates/actor/parts/actor-effects.hbs
@@ -17,7 +17,7 @@
         <div class="item-header flexrow">
           <div class="item-name effect-name">
             <img class="item-image" src="{{effect.icon}}"/>
-            <h4>{{effect.label}}</h4>
+            <h4>{{effect.name}}</h4>
           </div>
           <div class="effect-source">{{effect.sourceName}}</div>
           <div class="effect-duration">{{effect.duration.label}}</div>
