--- a/templates/item/item-container-sheet.hbs
+++ b/templates/item/item-container-sheet.hbs
@@ -74,6 +74,8 @@
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containedItemIds'}}</label>
         <input type="text" name="system.itemIds" value="{{system.itemIds}}"/>
+        <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
+        <input type="text" name="system.containerId" value="{{system.containerId}}"/>
       </div>
     </div>
   </section>
