--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -10,6 +10,76 @@
       </a>
     </div>
   </li>
+  {{!-- Container items --}}
+  {{#each containers as |container id|}}
+    <li class="item-entry item" data-item-id="{{container._id}}">
+      <div class="item-header flexrow">
+        <div class="item-name">
+          <div class="item-image">
+            {{#if container.system.formula}}
+            <a class="rollable" data-roll-type="item" data-label="{{container.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{container.img}}" title="{{container.name}}" width="24" height="24"/></a>
+            {{else}}
+            <img src="{{container.img}}" title="{{container.name}}" width="24" height="24"/>
+            {{/if}}
+          </div>
+          <a><h4 class="item-drop">{{container.name}}</h4></a>
+        </div>
+        <div class="item-prop">{{container.system.quantity.value}}
+          {{#if container.system.quantity.max}}
+            / {{container.system.quantity.max}}
+          {{/if}}</div>
+        <div class="item-prop">{{container.system.weight}}</div>
+        <div class="item-prop">{{container.system.location}}</div>
+        <div class="item-controls">
+          <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+          <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
+        </div>
+      </div>
+      <div class="item-summary">
+        <div class="item-description">
+          <div>{{{container.system.description}}}</div>
+        </div>
+      </div>
+    </li>
+      {{!-- <ol class="items-list"> --}}
+        {{!-- Items in a container --}}
+        {{#each container.contents as |item id|}}
+          <li class="item-entry item" data-item-id="{{item._id}}">
+            <div class="item-header flexrow">
+              <div class="item-name contained-items">
+                <div class="item-image">
+                  {{#if item.system.formula}}
+                  <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                  {{else}}
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                  {{/if}}
+                </div>
+                <a><h4 class="item-drop">{{item.name}}</h4></a>
+              </div>
+              <div class="item-prop">{{item.system.quantity.value}}
+                {{#if item.system.quantity.max}}
+                  / {{item.system.quantity.max}}
+                {{/if}}</div>
+              <div class="item-prop">{{item.system.weight}}</div>
+              <div class="item-prop">{{item.system.location}}</div>
+              <div class="item-controls">
+                <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+                <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
+              </div>
+            </div>
+            <div class="item-summary">
+              <div class="item-description">
+                <div class="contained-items">{{{item.system.description}}}</div>
+              </div>
+            </div>
+          </li>
+        {{/each}}
+      {{!-- </ol> --}}
+    {{!-- </li> --}}
+  {{/each}}
+  {{!-- Non-contained and non-container items --}}
   {{#each gear as |item id|}}
     <li class="item-entry item" data-item-id="{{item._id}}">
       <div class="item-header flexrow">
