--- a/templates/item/item-container-sheet.hbs
+++ b/templates/item/item-container-sheet.hbs
@@ -64,8 +64,10 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        {{#if rollData.isGM}}
-        {{!-- <label class="resource-label">System Roll Formula</label>
+        {{log 'User is GM? 'isGM}}
+        {{#if isGM}}
+        {{!-- {{#if rollData.isGM}} --}}
+        {{!-- <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
         <input type="text" name="system.formula" value="{{system.formula}}" disabled/> --}}
         {{/if}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
