--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -70,7 +70,9 @@
     <div class="tab attributes" data-group="primary" data-tab="attributes">
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
-        {{#if rollData.isGM}}
+        {{log 'User is GM? 'isGM}}
+        {{#if isGM}}
+        {{!-- {{#if rollData.isGM}} --}}
         <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
         <input type="text" name="system.formula" value="{{system.formula}}" />
         {{/if}}
