armor sheet doesn't need roll formula

--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -74,8 +74,8 @@
         {{log 'User is GM? 'isGM}}
         {{#if isGM}}
         {{!-- {{#if rollData.isGM}} --}}
-        <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
-        <input type="text" name="system.formula" value="{{system.formula}}"/>
+        {{!-- <label class="resource-label">{{localize 'HYP3E.rollFormula'}}</label>
+        <input type="text" name="system.formula" value="{{system.formula}}"/> --}}
         {{/if}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
