bug fix for npc weapon add; new ammo mgmt for characters

--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -56,7 +56,7 @@
       {{> "systems/hyp3e/templates/actor/parts/npc-abilities.hbs"}}
     </div>
 
-    {{!-- Owned Items Tab --}}
+    {{!-- Description Tab --}}
     <div class="tab description" data-group="primary" data-tab="description">
       <div class="npc-description-block">
         <h2>{{localize 'HYP3E.headers.descNotes'}}</h2>
