--- a/templates/actor/parts/npc-all-items.hbs
+++ b/templates/actor/parts/npc-all-items.hbs
@@ -1,4 +1,4 @@
-{{!-- Abilities, weapons, armor, and gear appear here --}}
+{{!-- Abilities, and features appear here --}}
 <h3>{{localize 'HYP3E.headers.abilitiesItems'}}</h3>
 <ol class="items-list">
   <li class="item flexrow items-header">
@@ -40,6 +40,7 @@
     </li>
   {{/each}}
 </ol>
+{{!-- Weapons, armor, and items appear here --}}
 <ol class="items-list">
   <li class="item flexrow items-header">
     <div class="item-name">{{localize 'HYP3E.headers.attacksItems'}}</div>
@@ -47,8 +48,8 @@
     <div class="item-prop">{{localize 'HYP3E.item.weight'}}</div>
     <div class="item-prop">{{localize 'HYP3E.item.location'}}</div>
     <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="item">
-        <i class="fas fa-plus"></i> {{localize "HYP3E.item.add"}}
+      <a class="item-control item-create" title="Create item" data-type="weapon">
+        <i class="fas fa-plus"></i> {{localize "HYP3E.attack.add"}}
       </a>
     </div>
   </li>
