--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -42,48 +42,45 @@
         </div>
       </div>
     </li>
-      {{!-- <ol class="items-list"> --}}
-        {{!-- Items in a container --}}
-        {{#each container.contents as |item id|}}
-          <li class="item-entry item" data-item-id="{{item._id}}">
-            <div class="item-header flexrow">
-              <div class="item-name contained-items">
-                <div class="item-image">
-                  {{#if item.system.formula}}
-                  <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-                  {{else}}
-                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-                  {{/if}}
-                </div>
-                <a><h4 class="item-drop">{{item.name}}</h4></a>
-              </div>
-              <div class="item-prop">
-                {{#if item.system.quantity.max}}
-                  <a class="item-control item-qty-sub" title='{{localize "HYP3E.item.decr"}}'><i class="fa fa-minus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
-                  <a class="item-control item-qty-add" title='{{localize "HYP3E.item.incr"}}'><i class="fa fa-plus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
-                {{/if}}
-                {{item.system.quantity.value}}
-                {{#if item.system.quantity.max}}
-                  / {{item.system.quantity.max}}
-                {{/if}}
-              </div>
-              <div class="item-prop">{{item.system.weight}}</div>
-              <div class="item-prop">{{item.system.location}}</div>
-              <div class="item-controls">
-                <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
-                <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
-                <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
-              </div>
+    {{!-- Items in a container --}}
+    {{#each container.contents as |item id|}}
+      <li class="item-entry item" data-item-id="{{item._id}}">
+        <div class="item-header flexrow">
+          <div class="item-name contained-items">
+            <div class="item-image">
+              {{#if item.system.formula}}
+              <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+              {{else}}
+              <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+              {{/if}}
             </div>
-            <div class="item-summary">
-              <div class="item-description">
-                <div class="contained-items">{{{item.system.description}}}</div>
-              </div>
-            </div>
-          </li>
-        {{/each}}
-      {{!-- </ol> --}}
-    {{!-- </li> --}}
+            <a><h4 class="item-drop">{{item.name}}</h4></a>
+          </div>
+          <div class="item-prop">
+            {{#if item.system.quantity.max}}
+              <a class="item-control item-qty-sub" title='{{localize "HYP3E.item.decr"}}'><i class="fa fa-minus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
+              <a class="item-control item-qty-add" title='{{localize "HYP3E.item.incr"}}'><i class="fa fa-plus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
+            {{/if}}
+            {{item.system.quantity.value}}
+            {{#if item.system.quantity.max}}
+              / {{item.system.quantity.max}}
+            {{/if}}
+          </div>
+          <div class="item-prop">{{item.system.weight}}</div>
+          <div class="item-prop">{{item.system.location}}</div>
+          <div class="item-controls">
+            <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+            <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+            <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
+          </div>
+        </div>
+        <div class="item-summary">
+          <div class="item-description">
+            <div class="contained-items">{{{item.system.description}}}</div>
+          </div>
+        </div>
+      </li>
+    {{/each}}
   {{/each}}
   {{!-- Non-contained and non-container items --}}
   {{#each gear as |item id|}}
@@ -125,3 +122,30 @@
     </li>
   {{/each}}
 </ol>
+<div class="money-block flexrow">
+  <div class="resource-content flexrow flex-group-center">
+    <h3>{{localize "HYP3E.headers.money"}}</h3>
+  </div>
+  <div class="resource-content flexrow flex-group-center">
+    <h3>{{localize "HYP3E.headers.treasure"}}</h3>
+  </div>
+  <div class="resource-content flexrow flex-group-center">
+    <h3>&nbsp;</h3>
+  </div>
+</div>
+<div class="money-block flexrow">
+  <div></div>
+  <div class="resource-content flex-group-center">
+    {{#each system.money as |coin key|}}
+      <div class="ability flexrow flex-group-center">
+        <label for="system.money.{{key}}.value" class="exploration-label">{{coin.label}}</label>
+        <input type="text" name="system.money.{{key}}.value" value="{{coin.value}}" />
+      </div>
+    {{/each}}
+  </div>
+  <div></div>
+  <div class="treasure-box">
+    {{!-- <textarea name="system.treasure" rows="10">{{system.treasure}}</textarea> --}}
+    {{editor system.treasure target="system.treasure" rollData=rollData button=true owner=owner editable=editable}}
+  </div>
+</div>
