Added basic spell memorization (slot) tracking

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -97,12 +97,12 @@
           <a><h4 class="item-drop">{{item.name}}</h4></a>
         </div>
         <div class="item-prop">
-          {{#if item.system.quantity.max}}
+          {{#if item.system.isConsumable}}
             <a class="item-control item-qty-sub" title='{{localize "HYP3E.item.decr"}}'><i class="fa fa-minus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
             <a class="item-control item-qty-add" title='{{localize "HYP3E.item.incr"}}'><i class="fa fa-plus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
           {{/if}}
           {{item.system.quantity.value}}
-          {{#if item.system.quantity.max}}
+          {{#if item.system.isConsumable}}
             / {{item.system.quantity.max}}
           {{/if}}
         </div>
