--- a/templates/actor/parts/actor-spells.hbs
+++ b/templates/actor/parts/actor-spells.hbs
@@ -37,7 +37,13 @@
             </div>
             <a><h4 class="item-drop">{{item.name}}</h4></a>
           </div>
-          <div class="item-prop">{{item.system.memorized}}</div>
+          <div class="item-prop">
+            {{#if item.system.isConsumable}}
+              <a class="item-control item-qty-sub" title='{{localize "HYP3E.item.decr"}}'><i class="fa fa-minus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
+              <a class="item-control item-qty-add" title='{{localize "HYP3E.item.incr"}}'><i class="fa fa-plus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
+            {{/if}}
+            {{item.system.quantity.value}} {{!-- {{item.system.quantity.max}} --}}
+            </div>
           <div class="item-prop">{{item.system.range}}</div>
           <div class="item-prop">{{item.system.duration}}</div>
           <div class="item-prop">{{item.system.save}}</div>
