--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -5,10 +5,6 @@
       <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
       <div class="flexrow">
         <div class="resource flexrow flex-group-center">
-          <label class="resource-label">{{localize 'HYP3E.item.ammunition'}}</label>
-          <input name="system.isAmmunition" type="checkbox" {{checked system.isAmmunition}}>
-        </div>
-        <div class="resource flexrow flex-group-center">
           <label class="resource-label flexlarge">{{localize 'HYP3E.item.qty'}}</label>
           <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" data-dtype="Number"/>
           /
@@ -89,6 +85,16 @@
         {{/if}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.consumable'}}</label>
+          <input name="system.isConsumable" type="checkbox" {{checked system.isConsumable}}>
+          <div class="flex-xlarge">The Consumable tag gives this item the increment/decrement buttons.</div>
+        </div>
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.ammunition'}}</label>
+          <input name="system.isAmmunition" type="checkbox" {{checked system.isAmmunition}}>
+          <div class="flex-xlarge">The Ammunication tag causes this item to display on the Combat tab.</div>
+        </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.containerId'}}</label>
