--- a/templates/item/item-spell-sheet.hbs
+++ b/templates/item/item-spell-sheet.hbs
@@ -12,7 +12,7 @@
           <label class="resource-label">{{localize 'HYP3E.details.level'}}</label>
           <input type="text" name="system.spellLevel" value="{{system.spellLevel}}" />
           <label class="resource-label">{{localize 'HYP3E.spell.numMem'}}</label>
-          <input type="text" name="system.memorized" value="{{system.memorized}}" />
+          <input type="text" name="system.quantity.value" value="{{system.quantity.value}}" />
         </div>
       </div>
     </div>
@@ -77,6 +77,11 @@
         {{/if}}
         <label class="resource-label">{{localize 'HYP3E.dataLabel.friendlyName'}}</label>
         <input type="text" name="system.friendlyName" value="{{system.friendlyName}}" />
+        <div class="flexrow flexshrink flex-group-left item-attributes">
+          <label class="resource-label">{{localize 'HYP3E.item.consumable'}}</label>
+          <input name="system.isConsumable" type="checkbox" {{checked system.isConsumable}}>
+          <div class="flex-xlarge">Note: Leave this item checked unless the spell is being used as an at-will power.</div>
+        </div>
         <label class="resource-label">{{localize 'HYP3E.dataLabel.itemId'}}</label>
         <input type="text" name="item._id" value="{{item._id}}" disabled/>
       </div>
