--- a/templates/actor/parts/actor-abilities.hbs
+++ b/templates/actor/parts/actor-abilities.hbs
@@ -1,80 +1,90 @@
-<section class="abilities flexrow">
-  {{!-- Natural Attributes --}}
-  <section class="abilities attribute-block">
-    {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
-    {{> "systems/hyp3e/templates/actor/parts/actor-attributes.hbs"}}
+<section class="all-content flexrow">
+  <section class="left-gutter">
+    <img src="systems/hyp3e/assets/serpent-spear.png">
   </section>
+  <section class="main-content">
+    <section class="abilities flexrow">
+      {{!-- Natural Attributes --}}
+      <section class="abilities attribute-block">
+        {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
+        {{> "systems/hyp3e/templates/actor/parts/actor-attributes.hbs"}}
+      </section>
 
-  {{!-- Exploration skills --}}
-  <section class="abilities exploration-block">
-    <h2>{{localize "HYP3E.headers.exploration"}}</h2>
-    <div class="abilities flexcol">
-      {{#each system.explorationSkills as |skill key|}}
-      <div class="ability flexrow flex-group-center">
-        <span class="rollable flex-xlarge align-left" data-roll="d6" data-roll-target="{{skill.value}}" data-roll-type="check" data-roll-mode="blindroll" data-label="{{skill.label}}">
-          <label for="system.explorationSkills.{{key}}.value" class="exploration-label">{{skill.label}}</label>
-          <i class="fas fa-dice-d6"></i>
-        </span>
-        <input type="text" name="system.explorationSkills.{{key}}.value" value="{{skill.value}}" data-dtype="Number"/>
-      </div>
+      {{!-- Exploration skills --}}
+      <section class="abilities exploration-block">
+        <h2>{{localize "HYP3E.headers.exploration"}}</h2>
+        <div class="abilities flexcol">
+          {{#each system.explorationSkills as |skill key|}}
+          <div class="ability flexrow flex-group-center">
+            <span class="rollable flex-xlarge align-left" data-roll="d6" data-roll-target="{{skill.value}}" data-roll-type="check" data-roll-mode="blindroll" data-label="{{skill.label}}">
+              <label for="system.explorationSkills.{{key}}.value" class="exploration-label">{{skill.label}}</label>
+              <i class="fas fa-dice-d6"></i>
+            </span>
+            <input type="text" name="system.explorationSkills.{{key}}.value" value="{{skill.value}}" data-dtype="Number"/>
+          </div>
+          {{/each}}
+          {{!-- Movement fields --}}
+          <div class="ability flexrow flex-group-center">
+            <span class="flex-xlarge align-left">
+              <label for="system.movement.exploration.name" class="exploration-label">{{localize "HYP3E.movement.exploration.name"}}</label>
+            </span>
+            <input type="text" name="system.movement.exploration.value" value="{{system.movement.exploration.value}}" data-dtype="Number" disabled/>
+          </div>
+          <div class="ability flexrow flex-group-center">
+            <span class="flex-xlarge align-left">
+              <label for="system.movement.travel.name" class="exploration-label">{{localize "HYP3E.movement.travel.name"}}</label>
+            </span>
+            <input type="text" name="system.movement.travel.value" value="{{system.movement.travel.value}}" data-dtype="Number" disabled/>
+          </div>
+        </div>
+        <div class="hyp3e-metal">
+          <img src="systems/hyp3e/assets/hyp3e-metal.png">
+        </div>
+      </section>
+    </section>
+
+    {{!-- For the class features list, span the full width of the sheet --}}
+    <ol class="items-list">
+      <li class="item flexrow items-header">
+        <div class="item-name">{{localize "HYP3E.headers.classAbilities"}}</div>
+        <div class="item-prop">{{localize "HYP3E.details.level"}}</div>
+        <div class="item-prop">{{localize "HYP3E.checkRoll"}}</div>
+        <div class="item-prop">{{localize "HYP3E.target"}}</div>
+        <div class="item-controls">
+          <a class="item-control item-create" title="Create item" data-type="feature">
+            <i class="fas fa-plus"></i> {{localize "HYP3E.feature.add"}}
+          </a>
+        </div>
+      </li>
+      {{#each features as |item id|}}
+        <li class="item-entry item" data-item-id="{{item._id}}">
+          <div class="item-header flexrow">
+            <div class="item-name">
+              <div class="item-image">
+                {{#if item.system.formula}}
+                <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                {{else}}
+                <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                {{/if}}
+              </div>
+              <a><h4 class="item-drop">{{item.name}}</h4></a>
+            </div>
+            <div class="item-prop">{{item.system.level}}</div>
+            <div class="item-prop">{{item.system.formula}}</div>
+            <div class="item-prop">{{item.system.tn}}</div>
+            <div class="item-controls">
+              <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+              <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            </div>
+          </div>
+          <div class="item-summary">
+            <div class="item-description">
+              <div>{{{item.system.description}}}</div>
+            </div>
+          </div>
+        </li>
       {{/each}}
-      {{!-- Movement fields --}}
-      <div class="ability flexrow flex-group-center">
-        <span class="flex-xlarge align-left">
-          <label for="system.movement.exploration.name" class="exploration-label">{{localize "HYP3E.movement.exploration.name"}}</label>
-        </span>
-        <input type="text" name="system.movement.exploration.value" value="{{system.movement.exploration.value}}" data-dtype="Number" disabled/>
-      </div>
-      <div class="ability flexrow flex-group-center">
-        <span class="flex-xlarge align-left">
-          <label for="system.movement.travel.name" class="exploration-label">{{localize "HYP3E.movement.travel.name"}}</label>
-        </span>
-        <input type="text" name="system.movement.travel.value" value="{{system.movement.travel.value}}" data-dtype="Number" disabled/>
-      </div>
-    </div>
+    </ol>
   </section>
 </section>
-
-{{!-- For the class features list, span the full width of the sheet --}}
-<ol class="items-list">
-  <li class="item flexrow items-header">
-    <div class="item-name">{{localize "HYP3E.headers.classAbilities"}}</div>
-    <div class="item-prop">{{localize "HYP3E.details.level"}}</div>
-    <div class="item-prop">{{localize "HYP3E.checkRoll"}}</div>
-    <div class="item-prop">{{localize "HYP3E.target"}}</div>
-    <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="feature">
-        <i class="fas fa-plus"></i> {{localize "HYP3E.feature.add"}}
-      </a>
-    </div>
-  </li>
-  {{#each features as |item id|}}
-    <li class="item-entry item" data-item-id="{{item._id}}">
-      <div class="item-header flexrow">
-        <div class="item-name">
-          <div class="item-image">
-            {{#if item.system.formula}}
-            <a class="rollable" data-roll-type="item" data-label="{{item.name}} {{localize 'HYP3E.dataLabel.check'}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-            {{else}}
-            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-            {{/if}}
-          </div>
-          <a><h4 class="item-drop">{{item.name}}</h4></a>
-        </div>
-        <div class="item-prop">{{item.system.level}}</div>
-        <div class="item-prop">{{item.system.formula}}</div>
-        <div class="item-prop">{{item.system.tn}}</div>
-        <div class="item-controls">
-          <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
-          <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
-          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-        </div>
-      </div>
-      <div class="item-summary">
-        <div class="item-description">
-          <div>{{{item.system.description}}}</div>
-        </div>
-      </div>
-    </li>
-  {{/each}}
-</ol>
