--- a/templates/actor/parts/actor-spells.hbs
+++ b/templates/actor/parts/actor-spells.hbs
@@ -1,64 +1,72 @@
-{{!-- Casting ability --}}
-<div class="spells-block flexrow flex-group-left">
-  <div class="casting-ability flexrow flex-group-center">
-    <span class="rollable" data-roll="1d20 + @ca" data-roll-type="basic" data-label="{{localize 'HYP3E.dataLabel.caCheck'}}">
-      <label for="system.ca" class="spells-label">{{localize "HYP3E.castingAbility"}}</label> 
-      <i class="fas fa-dice-d20"></i>
-    </span>
-    <input type="text" class="spells" name="system.ca" value="{{system.ca}}" data-dtype="Number"/>
-  </div>
-</div>
+<section class="all-content flexrow">
+  <section class="left-gutter">
+    <img src="systems/hyp3e/assets/serpent-spear.png">
+  </section>
+  <section class="main-content">
+    {{!-- Casting ability --}}
+    <h2>{{localize 'HYP3E.tabs.spells'}}</h2>
+    <div class="spells-block flexrow flex-group-left">
+      <div class="casting-ability flexrow flex-group-center">
+        <span class="rollable" data-roll="1d20 + @ca" data-roll-type="basic" data-label="{{localize 'HYP3E.dataLabel.caCheck'}}">
+          <label for="system.ca" class="spells-label">{{localize "HYP3E.castingAbility"}}</label> 
+          <i class="fas fa-dice-d20"></i>
+        </span>
+        <input type="text" class="spells" name="system.ca" value="{{system.ca}}" data-dtype="Number"/>
+      </div>
+    </div>
 
-{{!-- Spells appear here --}}
-<ol class="items-list">
-  {{#each spells as |spells spellLevel|}}
-    <li class="item flexrow items-header">
-      <div class="item-name">{{localize 'HYP3E.details.level'}} {{spellLevel}} {{localize 'HYP3E.dataLabel.spells'}}</div>
-      <div class="item-prop">{{localize 'HYP3E.spell.numMem'}}</div>
-      <div class="item-prop">{{localize 'HYP3E.weapon.range'}}</div>
-      <div class="item-prop">{{localize 'HYP3E.spell.duration'}}</div>
-      <div class="item-prop">{{localize 'HYP3E.spell.save'}}</div>
-      <div class="item-controls">
-        <a class="item-control item-create" title="Create item" data-type="spell" data-spell-level="{{spellLevel}}">
-          <i class="fas fa-plus"></i> {{localize "HYP3E.spell.addLvl"}} {{spellLevel}}
-        </a>
-      </div>
-    </li>
-    {{#each spells as |item id|}}
-      <li class="item-entry item" data-item-id="{{item._id}}">
-        <div class="item-header flexrow">
-          <div class="item-name">
-            <div class="item-image">
-              {{#if item.system.atkRoll}}
-              <a class="rollable" data-roll-type="item" data-label="{{localize 'HYP3E.dataLabel.attackWith'}} {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-              {{else}}
-              <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
-              {{/if}}
-            </div>
-            <a><h4 class="item-drop">{{item.name}}</h4></a>
-          </div>
-          <div class="item-prop">
-            {{#if item.system.isConsumable}}
-              <a class="item-control item-qty-sub" title='{{localize "HYP3E.item.decr"}}'><i class="fa fa-minus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
-              <a class="item-control item-qty-add" title='{{localize "HYP3E.item.incr"}}'><i class="fa fa-plus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
-            {{/if}}
-            {{item.system.quantity.value}} {{!-- {{item.system.quantity.max}} --}}
-            </div>
-          <div class="item-prop">{{item.system.range}}</div>
-          <div class="item-prop">{{item.system.duration}}</div>
-          <div class="item-prop">{{item.system.save}}</div>
+    {{!-- Spells appear here --}}
+    <ol class="items-list">
+      {{#each spells as |spells spellLevel|}}
+        <li class="item flexrow items-header">
+          <div class="item-name">{{localize 'HYP3E.details.level'}} {{spellLevel}} {{localize 'HYP3E.dataLabel.spells'}}</div>
+          <div class="item-prop">{{localize 'HYP3E.spell.numMem'}}</div>
+          <div class="item-prop">{{localize 'HYP3E.weapon.range'}}</div>
+          <div class="item-prop">{{localize 'HYP3E.spell.duration'}}</div>
+          <div class="item-prop">{{localize 'HYP3E.spell.save'}}</div>
           <div class="item-controls">
-            <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
-            <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
-            <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
+            <a class="item-control item-create" title="Create item" data-type="spell" data-spell-level="{{spellLevel}}">
+              <i class="fas fa-plus"></i> {{localize "HYP3E.spell.addLvl"}} {{spellLevel}}
+            </a>
           </div>
-      </div>
-      <div class="item-summary">
-        <div class="item-description">
-          <div>{{{item.system.description}}}</div>
-        </div>
-      </div>
-      </li>
-    {{/each}}
-  {{/each}}
-</ol>
+        </li>
+        {{#each spells as |item id|}}
+          <li class="item-entry item" data-item-id="{{item._id}}">
+            <div class="item-header flexrow">
+              <div class="item-name">
+                <div class="item-image">
+                  {{#if item.system.atkRoll}}
+                  <a class="rollable" data-roll-type="item" data-label="{{localize 'HYP3E.dataLabel.attackWith'}} {{item.name}}"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                  {{else}}
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                  {{/if}}
+                </div>
+                <a><h4 class="item-drop">{{item.name}}</h4></a>
+              </div>
+              <div class="item-prop">
+                {{#if item.system.isConsumable}}
+                  <a class="item-control item-qty-sub" title='{{localize "HYP3E.item.decr"}}'><i class="fa fa-minus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
+                  <a class="item-control item-qty-add" title='{{localize "HYP3E.item.incr"}}'><i class="fa fa-plus-circle" aria-hidden="true"></i></a>&nbsp;&nbsp;
+                {{/if}}
+                {{item.system.quantity.value}} {{!-- {{item.system.quantity.max}} --}}
+                </div>
+              <div class="item-prop">{{item.system.range}}</div>
+              <div class="item-prop">{{item.system.duration}}</div>
+              <div class="item-prop">{{item.system.save}}</div>
+              <div class="item-controls">
+                <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
+                <a class="item-control item-edit" title="{{localize 'HYP3E.item.edit'}}"><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" title="{{localize 'HYP3E.item.delete'}}"><i class="fas fa-trash"></i></a>
+              </div>
+          </div>
+          <div class="item-summary">
+            <div class="item-description">
+              <div>{{{item.system.description}}}</div>
+            </div>
+          </div>
+          </li>
+        {{/each}}
+      {{/each}}
+    </ol>
+  </section>
+</section>
